# spectre

containers/: Dockerfile.buildenv
src/DataStructures/Tensor/: TypeAliases.hpp
src/DataStructures/Tensor/EagerMath/: FrameTransform.cpp
src/Domain/Creators/: AlignedLattice.cpp  AlignedLattice.hpp  Brick.cpp  Rectangle.cpp  Rectangle.hpp
src/Elliptic/BoundaryConditions/: ApplyBoundaryCondition.hpp  BoundaryCondition.hpp
src/Elliptic/DiscontinuousGalerkin/Actions/: ApplyOperator.hpp
src/Elliptic/Executables/: CMakeLists.txt  Solver.hpp
src/Elliptic/Executables/Poisson/: CMakeLists.txt  SolvePoisson.hpp
src/Elliptic/Executables/Poisson/Actions/: InitializeEffectiveSource.hpp
src/Elliptic/Executables/SelfForce/GeneralRelativity/: CMakeLists.txt  SolveGrSelfForce.cpp  SolveGrSelfForce.hpp
src/Elliptic/Executables/SelfForce/GeneralRelativity/Actions/: InitializeEffectiveSource.hpp
src/Elliptic/Executables/SelfForce/Scalar/: CMakeLists.txt  SolveScalarSelfForce.cpp  SolveScalarSelfForce.hpp
src/Elliptic/Executables/SelfForce/Scalar/Actions/: InitializeEffectiveSource.hpp
src/Elliptic/Systems/: CMakeLists.txt
src/Elliptic/Systems/Poisson/: Equations.hpp  FirstOrderSystem.hpp
src/Elliptic/Systems/SelfForce/GeneralRelativity/: CMakeLists.txt  Equations.cpp  Equations.hpp  FirstOrderSystem.hpp  Tags.hpp
src/Elliptic/Systems/SelfForce/GeneralRelativity/BoundaryConditions/: Angular.cpp  Angular.hpp  CMakeLists.txt  Factory.hpp  Sommerfeld.cpp  Sommerfeld.hpp
src/Elliptic/Systems/SelfForce/Scalar/: CMakeLists.txt  Equations.cpp  Equations.hpp  FirstOrderSystem.hpp  Tags.hpp
src/Elliptic/Systems/SelfForce/Scalar/BoundaryConditions/: Angular.cpp  Angular.hpp  CMakeLists.txt  Factory.hpp  Sommerfeld.cpp  Sommerfeld.hpp
src/NumericalAlgorithms/DiscontinuousGalerkin/: NormalDotFlux.hpp  ProjectToBoundary.hpp
src/NumericalAlgorithms/Interpolation/: RegularGridInterpolant.cpp
src/NumericalAlgorithms/LinearOperators/: WeakDivergence.cpp
src/ParallelAlgorithms/Events/: ObserveFields.hpp  ObserveNorms.cpp  ObserveNorms.hpp
src/ParallelAlgorithms/LinearSolver/Multigrid/: Hierarchy.cpp
src/PointwiseFunctions/AnalyticData/: CMakeLists.txt
src/PointwiseFunctions/AnalyticData/SelfForce/: CMakeLists.txt
src/PointwiseFunctions/AnalyticData/SelfForce/GeneralRelativity/: ABC.cpp  ABC.hpp  CMakeLists.txt  CircularOrbit.cpp  CircularOrbit.hpp  source_convert.cpp  source_convert.hpp
src/PointwiseFunctions/AnalyticData/SelfForce/Scalar/: CMakeLists.txt  CircularOrbit.cpp  CircularOrbit.hpp
src/PointwiseFunctions/GeneralRelativity/: CMakeLists.txt  TortoiseCoordinates.cpp  TortoiseCoordinates.hpp
src/Visualization/Python/: PlotAlongLine.py  PlotSlice.py
support/Python/: requirements.txt
tests/InputFiles/Poisson/: ProductOfSinusoids2D.yaml
tests/InputFiles/SelfForce/: GrCircularOrbit.yaml  ScalarCircularOrbit.yaml  compare.ipynb
tests/Unit/PointwiseFunctions/AnalyticData/: CMakeLists.txt
tests/Unit/PointwiseFunctions/AnalyticData/SelfForce/Scalar/: CMakeLists.txt  Test_CircularOrbit.cpp
