# Distributed under the MIT License.
# See LICENSE.txt for details.

set(LIBRARY "Test_ScalarSelfForceAnalyticData")

set(LIBRARY_SOURCES
  Test_CircularOrbit.cpp
  )

add_test_library(${LIBRARY} "${LIBRARY_SOURCES}")

target_link_libraries(
  ${LIBRARY}
  PRIVATE
  DataStructures
  Utilities
  ScalarSelfForce
  ScalarSelfForceAnalyticData
  Domain
  DomainCreators
  LinearOperators
  )
